# AReaL

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE_ANALYSIS_STALENESS.md  AReaL_architecture.puml  AReaL_architecture_README.md  AReaLite_architecture.puml  AReaLite_architecture_README.md  BUFFER_ANALYSIS_SUMMARY.md  CAPACITY_RECOVERY_BUG_ANALYSIS.md  CHANGES_SUMMARY.md  COMPLETE_TEST_COVERAGE.md  COMPREHENSIVE_TEST_COVERAGE.md  CONTRIBUTING.md  CUDA_OOM_FIX.md  DESIGN_PATTERN_REFACTORING.md  Dockerfile  FEATURE_ACTIVATION_VERIFICATION.md  FEATURE_SUMMARY.md  FINAL_FIX_SUMMARY.md  HYDRA_OVERRIDE_ISSUE.md  INTEGRATION_PROGRESS.md  INTEGRATION_STATUS.md  INTEGRATION_STATUS_V3.md  INTEGRATION_STRATEGY_ASYNC_TASK_RUNNER.md  LEGAL.md  METRICS_AND_LOGGING_SUMMARY.md  MODEL_UTILS_TEST_SUMMARY.md  README.md  REBASE_PLAN_V2.md  REBASE_STATUS.md  REBASE_STRATEGY.md  ROADMAP.md  SEGMENT_WISE_PPO_API_REFERENCE.md  SEGMENT_WISE_PPO_DEFAULT.md  TEST_COVERAGE_SEGMENT_WISE_PPO.md  TEST_COVERAGE_UPDATE.md  TEST_FIX_DESIGN_DECISIONS.md  TYPE_ANNOTATION_CLEANUP.md  UNIT_TEST_COMPLETION_SUMMARY.md  (+11 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/DISCUSSION_TEMPLATE/: ideas.yml  show-and-tell.yml
.github/ISSUE_TEMPLATE/: bug-issue-template.md  bug.md  config.yml  doc.md  feature-request-issue-template.md  feature.md  refactor.md
.github/PULL_REQUEST_TEMPLATE/: bugfix.md
.github/workflows/: deploy-docs.yml  format-check.yml  installation-validation.yml  stale-issues.yml  test-areal-grpo.yml  test-areal-sft.yml  test-areal-unit.yml  test-areal.yml  test-arealite.yml
areal/: README.md  __init__.py  version.py
areal/api/: alloc_mode.py  cache_api.py  cli_args.py  controller_api.py  engine_api.py  io_struct.py  proximal_recomputer.py  queue_api.py  reward_api.py  scheduler_api.py  staleness_control.py  workflow_api.py  workflow_components.py  workflow_factory.py
areal/controller/: batch.py
areal/core/: __init__.py  async_task_runner.py  capacity_modifier.py  dist_rollout.py  filtered_capacity_modifier.py  remote_inf_engine.py  rollout_cache.py  rollout_queue.py  staleness_manager.py  staleness_strategies.py  workflow_executor.py
areal/dataset/: __init__.py  clevr_count_70k.py  geometry3k.py  gsm8k.py  hhrlhf.py  torl_data.py
areal/engine/: base_hf_engine.py  fsdp_engine.py  megatron_engine.py  sglang_remote.py  vllm_remote.py
areal/experimental/: autotp_engine.py  megatron_actor.py  megatron_engine.py  megatron_lm_engine.py  sglang_engine.py
areal/launcher/: local.py  ray.py  sglang_server.py  slurm.py  vllm_server.py
areal/reward/: __init__.py  clevr_count_70k.py  geometry3k.py  math_parser.py
areal/tests/: conftest.py  test_adv_norm_config.py  test_allocation_mode.py  test_async_task_runner.py  test_batch.py  test_cache_queue_abstractions.py  test_data_redistribution.py  test_examples.py  test_filtered_capacity_modifier.py  test_fsdp_engine_nccl.py  test_fsdp_ulysses_forward.py  test_fsdp_ulysses_train_batch.py  test_lock.py  test_megatron_engine.py  test_model_utils.py  test_packed_vs_padded_consistency.py  test_rpc.py  test_segment_wise_ppo_config.py  test_sglang_engine.py  test_staleness_control.py  test_staleness_manager.py  test_staleness_manager_modifications.py  test_train_engine.py  test_ulysses.py  test_utils.py  test_vllm_engine.py  test_workflow_api_modifications.py  test_wrapper.py  utils.py
areal/utils/: batch_utils.py  data.py  dataloader.py  datapack.py  device.py  distributed.py  errors.py  evaluator.py  fs.py  fsdp.py  functional.py  hf_utils.py  http.py  image.py  launcher.py  lock.py  logging.py  model.py  multi_tensor_apply.py  name_resolve.py  names.py  nccl.py  pkg_version.py  printing.py  ray.py  recover.py  redistributor.py  saver.py  seeding.py  slurm.py  stats_logger.py  stats_tracker.py  timeutil.py  ulysses.py
areal/workflow/: multi_turn.py  rlvr.py  vision_rlvr.py
arealite/: README.md
arealite/api/: cli_args.py  engine_api.py  env_api.py  io_struct.py  reward_api.py  trainer_api.py  workflow_api.py
arealite/dataset/: __init__.py
arealite/engine/: autotp_engine.py  base_hf_engine.py  fsdp_engine.py  hf.py  hf_engine.py  sglang_engine.py  sglang_remote.py  vllm_remote.py
arealite/launcher/: local.py  ray.py  sglang_server.py  slurm.py
arealite/system/: rollout_controller.py  rollout_worker.py  sglang_client.py  sglang_server.py
arealite/tests/: test_engine.py  test_fsdp_engine.py  test_fsdp_engine_nccl.py  test_sglang_engine.py  test_sglang_local_engine.py  test_utils.py  (+2 more)
blog/: AReaL_v0_1.md  AReaL_v0_2.md  AReaL_v0_3.md
ci/: build_env_image.sh  clone_repo.sh  test_areal.sh  test_arealite.sh
docs/: PROXIMAL_T_BUGS_COMPLETE_ANALYSIS.md  README.md  _config.yml  _toc.yml  amend_batch_sequence.puml  buffer_analysis.md  buffer_analysis_en.md  buffer_class_diagram.puml  cli_reference.md  contrib.md  eval.md  generate_cli_docs.py  get_batch_for_rpc_sequence.puml  installation.md  intro.md  put_batch_sequence.puml  training.md  troubleshooting.md  version_history.md
evaluation/: README.md  aggregate_acc_from_generated.py  cf_elo_caculator.py  code_eval.py  data_loader.py  eval.sh  eval_and_aggregate.py  eval_and_aggregate_debug.py  evaluate.py  grader.py  math_eval.py  math_utils.py  model_utils.py  parser.py  python_executor.py  requirements.txt  rm_maj_eval.py  trajectory.py  utils.py
examples/: README.md  README_zh.md  clevr_count_70k_grpo.py  cluster_config.json  cluster_config_on_ray.json  gsm8k_sft.py  run_async_ppo.sh  run_sft.sh  run_sync_ppo.sh  train_1.5B_n16_on_ray.sh  train_7B_zero_n16_on_ray.sh  train_batch_1.5B_n1.sh  train_batch_1.5B_n16.sh  train_batch_1.5B_n4.sh  train_batch_7B_n16.sh  train_batch_7B_n4.sh  train_batch_7B_zero_n16.sh  train_code_batch_1.5B_n16.sh  train_code_small_on_ray.sh  train_small_on_ray.sh  train_tiny_on_ray.sh  train_zero_on_ray.sh
functioncall/: __init__.py
notebook/: math_reflection_zh.ipynb  search_agent_zh.ipynb
realhf/: __init__.py  utils.py  version.py
tests/: __init__.py  fixtures.py
training/: main_async_ppo.py  main_ppo.py  main_sft.py  main_sync_ppo.py  utils.py
(+612 files in other folders)
